# tichu_tournament_plan

./: .gitignore  README.adoc  pyproject.toml
.github/workflows/: pylint.yml  pytest.yml
script/: excel.py  input.py  main.py  output.py  tests.py  utils.py
